welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: reassignment to val
  if (a=2 &b=2 & c=2){
       ^redTicket:6: error: reassignment to val
    if (a=b=c){
         ^